# bindings-vamp

./: README.md  bindings-vamp.cabal
Bindings/Sound/FeatureExtraction/: Vamp.hsc
cbits/: helper_functions.c
